--- a/app/views/classements/index.html.erb
+++ b/app/views/classements/index.html.erb
@@ -1,17 +1,6 @@
 
 <h1>Classements</h1>
 
- <%# @resDivCourante.each do |res| %>
-   <ul> 
-      <%#= res.id %> | 
-      <%#= res.mt %>
-    </ul>
-  <%# end %>
-
-
-   <%= @resVal1 %>
-    <%= @resVal2 %>
-
    <br/>
 
 <%# btn choix saison %>
@@ -112,155 +101,40 @@
    
  <%#= tableau data classement %>
 
- <% if (@eventId).blank? %>
- <% else %>
-  <% eventNum = Event.find(@eventId).numero %>
+   <table class="table table-striped table-bordered table-hover">
+    <thead class="table-dark">
+      <tr>
+        <th style="text-align: center;">#</th>
+        <th>Pilote</th>
+        <th style="text-align: center;">total</th>
+      </tr>
+    </thead>
 
-      <table class="table table-striped table-bordered table-hover">
-        <thead class="table-dark">
-          <tr>
-            <th style="text-align: center;">#</th>
-            <th>Pilote</th>
-            <th style="text-align: center;">total</th>
-          </tr>
-        </thead>
-       <tbody>
-         
-             <% if @pilotesActifDiv.blank? %>
-             <% else %>
-               <tr>
-                <% @pilotesActifDiv.each_with_index do |pilote, i| %>
-                   <td style="text-align: center;">
-                    <strong>  
-                      <%= (i+1) %>
-                    </strong> 
-                   </td>
-                   <td>
-                      <div class="contenant">
-                        <% equipeId = pilote.ecurie %>  
-                        <%= image_tag Equipe.find(equipeId).logo, style: "width: 200px; display: block", class: "img-fluid rounded" %>
-                          <div class="texte_centrer">
-                            <%= pilote.nom %>  
-                          </div>
-                      </div>
-                   </td>
-
-                     <td style="text-align: center;">
-                      <% saisonId = Event.find(@eventId).saison_id %>
-                      <% divisionId = Event.find(@eventId).division_id %>
-
-                      <strong>
-                        <% cumulScore = Resultat.joins(:event).where(
-                          'numero <= :numero AND saison_id = :saison_id AND pilote_id = :pilote_id AND division_id = :division_id', 
-                            numero: eventNum, saison_id: saisonId, pilote_id: pilote.id, division_id: divisionId).sum(:score)  %>
-                          <%= number_with_precision(cumulScore, precision: 0) %>
-                      </strong>
-                    <td>
-                       <strong>
-
-                        
-                      </strong>
-                    </td>
-
-                   </td>
-                  </tr>
-                <% end %>
-             <% end %>
-
-
-
-
-
- <br/> <hr/>
-
- <%# test holdging 2 avec ordre %>
-    
- <% @pilotesActifDiv.each do | pil | %>
-    <ul>
-       <% pil.id %> 
-          <% @holdings2.each do | hol | %>
-            <% if hol[0] == pil.id %>
-              <%#= hol[0] %> 
-              <%#= hol[1] %> 
-            <% end %>
+    <tbody>
+      <tr>
+        <% @test7.each_with_index do | hol, i| %>
+          <td style="text-align: center;">
+              <strong>  
+                <%= (i+1) %>
+              </strong> 
+          </td>
+          <td>
+            <%= hol[0] %> 
+          </td>
+          <td>
+            <%= hol[1] %> 
+          </td>
+      </tr>
       <% end %>
-    </ul>
-  <% end %>
-
- <br/> <hr/>
- 
-
-<% @holdings4.each do | hol | %>
-  <ul>
-      <%#= hol[0] %> 
-      <%#= hol[1] %> 
-  </ul>
-<% end %>
+    </tbody>
+  </table>
 
 
 
  <br/> <hr/>
-
-
-<% @test6.each do | hol | %>
-  <ul>
-      <% hol[0] %> 
-      <% hol[1] %> 
-      <% hol[2] %> 
-  </ul>
-<% end %>
-
-<strong> test courant : </strong>
-<% @test7.each do | hol | %>
-  <ul>
-      <%= hol[0] %> 
-      <%= hol[1] %> 
-   
-  </ul>
-<% end %>
-
-
-
- <br/> <hr/>
-
-
-<% @scores.each do | hol | %>
-  <ul>
-      <%#= hol[:name] %> 
-      <%#= hol[:score] %>
-  </ul>
-<% end %>
-
-
-<br/> <hr/>
-
-<% @scoresBis.each do | hol | %>
-  <ul>
-      <%#= hol[0] %> 
-      <%#= hol[:score] %>
-  </ul>
-<% end %>
-
-
-<br/> <hr/>
-
-<% @scoresTer.each do | hol | %>
-  <ul>
-      <%#= hol %> 
-      
-  </ul>
-<% end %>
-
-
-
-
-       </tbody>
-      </table>
-
       
   <%# PDF event actif %>
    
   <%= link_to "PDF", classements_path(eventId: @eventId, format: :pdf), class:"btn btn-dark" %>
 
-  <% end %>
 
