--- a/app/views/classements/index.html.erb
+++ b/app/views/classements/index.html.erb
@@ -48,8 +48,7 @@
   <%# entete event %>
   <%# @eventId %>
 
- <% if (@eventId).blank? %>
- <% else %>
+ <% if (@eventId).present? %>
 
     <table width="600">
         <thead>
@@ -96,7 +95,7 @@
           </tr>
       </tbody>
     </table>
- <% end %>
+
     <hr/>
    
  <%#= tableau data classement %>
@@ -112,17 +111,26 @@
 
     <tbody>
       <tr>
-        <% @test7.each_with_index do | hol, i| %>
+        <% @resultatsFiltres.each_with_index do | res, i| %>
           <td style="text-align: center;">
               <strong>  
                 <%= (i+1) %>
               </strong> 
           </td>
           <td>
-            <%= hol[0] %> 
+           <div class="contenant">
+              <% equipeId = Pilote.find(res[0]).ecurie %>  
+              <% nomPilote = Pilote.find(res[0]).nom %> 
+              <%= image_tag Equipe.find(equipeId).logo, style: "width: 200px; display: block", class: "img-fluid rounded" %>
+                <div class="texte_centrer">
+                  <%= nomPilote %> 
+                </div>
+            </div>
           </td>
-          <td>
-            <%= hol[1] %> 
+          <td style="text-align: center;">
+            <strong>
+              <%= number_with_precision(res[1], precision: 0) %>
+            </strong>
           </td>
       </tr>
       <% end %>
@@ -136,5 +144,7 @@
   <%# PDF event actif %>
    
   <%= link_to "PDF", classements_path(eventId: @eventId, format: :pdf), class:"btn btn-dark" %>
+
+   <% end %>
 
 
