format pdf classement pilote

--- a/app/views/classecuries/liste.html.erb
+++ b/app/views/classecuries/liste.html.erb
@@ -89,7 +89,12 @@
     
   </table>
 
-<br/><br/>
+  <br/>
+
+<%# bas de page depuis partial %>
+<%= render "shared/baspdf" %>
+
+
    PDF generation date:
 <%= Time.zone.now %>
 
