--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -4,7 +4,6 @@ body {
 	margin:0;
 } 
 
-
 th, td {
    // border: 1px solid rgb(44, 43, 43);
     text-align: center;
@@ -13,8 +12,6 @@ th, td {
     color: white;
    
 }
-
-
 
 th {
     background-color: rgb(0, 0, 0);
@@ -25,15 +22,17 @@ th {
  .val_entete {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
+  font-size: x-large;
+  height: 40px;
  }
 
  .cols_pos_score {
-
     background-color: rgb(255, 255, 255);
-    width: 50px;
+    width: 80px;
     font-weight: bold;
     font-size: x-large;
     color: rgb(0, 0, 0);
+   
  }
 
  /* format des image ecurie avec nom pilote au dessus : */
@@ -44,7 +43,6 @@ th {
     color: white;
    // width: 500px;
   
-   
   }
   
   .texte_centrer {
@@ -61,7 +59,6 @@ th {
     color: white;
     font-family: verdana;
   }
-
 
   #imgDrapeau{
     position: absolute;
