--- a/app/views/classements/liste.html.erb
+++ b/app/views/classements/liste.html.erb
@@ -1,51 +1,44 @@
-<%= wicked_pdf_image_tag asset_url('/images/if1main.png'), style: "width: 200px; display: block", class: "img-fluid rounded" %> 
+<%= wicked_pdf_image_tag asset_url('/images/if1main.png'), style: "width: 150px;", class: "img-fluid rounded", id:"imgLogoIf1" %> 
 
-<h1> Classement Pilotes </h1>
+<h1> Classement </h1>
+
+   
 
 <% eventId = @eventId %>
 
-<%#= @eventId %>
+<% Event.find(eventId).date %>
+<% circuitId = Event.find(eventId).circuit_id %> 
+
+
+  <% if Circuit.find(circuitId).drapeau.present? %>
+    <%= image_tag(Circuit.find(circuitId).drapeau, style: "width: 100px; display: block", class: "img-fluid rounded", id:"imgDrapeau") %> 
+  <% end %>
 
 
  <table width="600" style="margin-left:auto;margin-right:auto">
     <thead>
       <tr>
-       
         <th>Date</th>
         <th>Pays</th>
-        <th>Drapeau</th>
-        <th>Carte</th>
         <th>Division</th>
-
       </tr>
     </thead>
 
     <tbody>
-
-  <tr>
-    <td>
-          <%= Event.find(eventId).date %>
-    </td>
-    <td>
-        <% circuitId = Event.find(eventId).circuit_id %> 
-        <%= Circuit.find(circuitId).pays %>
-    </td>
-     <td width="60">
-        <% if Circuit.find(circuitId).drapeau.present? %>
-          <%= image_tag(Circuit.find(circuitId).drapeau, style: "width: 50px; display: block", class: "img-fluid rounded") %> 
-        <% end %>
-    </td>
-      <td width="60">
-        <% if Circuit.find(circuitId).carte.present? %>
-          <%= image_tag(Circuit.find(circuitId).carte, style: "width: 50px; display: block", class: "img-fluid rounded") %>  
-        <% end %>
-    </td>
-    <td>
-        <% divisionId = Event.find(eventId).division_id %> 
-        <%= Division.find(divisionId).numero %>
-    </td>
-   
-  </tr>
+      <tr>
+        <td class="val_entete">
+            <%= Event.find(eventId).date %>
+        </td>
+        <td class="val_entete">
+          <% circuitId = Event.find(eventId).circuit_id %> 
+          <%= Circuit.find(circuitId).pays %>
+        </td>
+         <td class="val_entete">
+          <% divisionId = Event.find(eventId).division_id %> 
+          <%= Division.find(divisionId).numero %>
+        </td>
+      
+      </tr>
   </tbody>
 </table>
 
@@ -57,56 +50,51 @@
  <% if (@eventId).blank? %>
  <% else %>
   <% eventNum = Event.find(@eventId).numero %>
-
     
-      <table width="600" style="margin-left:auto;margin-right:auto">
+      <table style="margin-left:auto;margin-right:auto">
         <thead class="table-dark">
           <tr>
-            <th style="text-align: center;">#</th>
+            <th>#</th>
             <th>Pilote</th>
-            <th style="text-align: center;">total</th>
+            <th>Points</th>
           </tr>
         </thead>
-       <tbody>
-         
-             <% if @pilotesActifDiv.blank? %>
-             <% else %>
-               <tr>
-                <% @pilotesActifDiv.each_with_index do |pilote, i| %>
-                   <td style="text-align: center;">
+
+          <tbody>
+            <tr>
+              <% @resultatsFiltres.each_with_index do | res, i| %>
+                <td class="cols_pos_score" >
                     <strong>  
                       <%= (i+1) %>
                     </strong> 
-                   </td>
-                   <td>
-                      <div class="contenant">
-                        <% equipeId = pilote.ecurie %>  
-                        <%= image_tag Equipe.find(equipeId).logo, style: "width: 200px; display: block", class: "img-fluid rounded" %>
-                          <div class="texte_centrer">
-                            <%= pilote.nom %>  
-                          </div>
+                </td>
+               <td>
+                <div class="contenant">
+                    <% equipeId = Pilote.find(res[0]).ecurie %>  
+                    <% nomPilote = Pilote.find(res[0]).nom %> 
+                    <%= image_tag Equipe.find(equipeId).logo, style: "width: 400px; display: block", class: "img-fluid rounded" %>
+                      <div class="texte_centrer">
+                        <%= nomPilote %> 
                       </div>
-                   </td>
+                  </div>
+                </td>
+                <td class="cols_pos_score">
+                  <strong>
+                    <%= number_with_precision(res[1], precision: 0) %>
+                  </strong>
+                </td>
+            </tr>
+      <% end %>
+    </tbody>
+    
+  </table>
 
-                     <td style="text-align: center;">
-                      <% saisonId = Event.find(@eventId).saison_id %>
-              
-                      <strong>
-                        <% cumulScore = Resultat.joins(:event).where(
-                          'numero <= :numero AND saison_id = :saison_id AND pilote_id = :pilote_id AND division_id = :division_id', 
-                            numero: eventNum, saison_id: saisonId, pilote_id: pilote.id, division_id: divisionId).sum(:score)  %>
-                          <%= number_with_precision(cumulScore, precision: 0) %>
-                      </strong>
-                   </td>
-                  </tr>
-                <% end %>
-             <% end %>
-         
-       </tbody>
-      </table>
+  <br/>
+
+<%# bas de page depuis partial %>
+<%= render "shared/baspdf" %>
 
 
-<br/><br/>
    PDF generation date:
 <%= Time.zone.now %>
 
