remove devise log in

--- a/app/views/saisons/index.html.erb
+++ b/app/views/saisons/index.html.erb
@@ -1,5 +1,5 @@
 
-<% if user_signed_in? %>
+<%# if user_signed_in? %>
 
 <br/>
 
@@ -46,9 +46,9 @@
   <%= link_to "Nouvelle saison", new_saison_path, class:"btn btn-primary" %>
 
 
-<% else %>
+<%# else %>
 
-  <h3> Vous n'avez pas les droits...</h3>
   
-<% end %>
+  
+<%# end %>
 
