--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -15,7 +15,7 @@
       		home_index_path, class:"nav-link" %> 
       </li>
 
-      <% if user_signed_in? %>
+      <%# if user_signed_in? %>
 
          
        
@@ -82,7 +82,7 @@
         </li>
 
 
-      <% else %>
+      <%# else %>
 
         <li class="nav-item">
           <%= link_to 'Inscription',
@@ -93,7 +93,7 @@
           <%= link_to 'Connexion',
             new_user_session_path, class:"nav-link" %> 
         </li>
-     <% end %>
+     <%# end %>
      
     </ul>
    
