--- a/app/views/pilotes/index.html.erb
+++ b/app/views/pilotes/index.html.erb
@@ -1,5 +1,5 @@
 
-<% if user_signed_in? %>
+<%# if user_signed_in? %>
 
   <br/>
   <h1 class="fa-solid fa-user fa-2xl fw-bold fs-1"> - Pilotes </h1>   
@@ -140,8 +140,8 @@
 
   <%= link_to "Nouveau pilote", new_pilote_path, class:"btn btn-primary" %>
 
-<% else %>
+<%# else %>
 
-  <h3> Vous n'avez pas les droits...</h3>
+ 
   
-<% end %>
+<%# end %>
