--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,5 +1,5 @@
 
-<% if user_signed_in? %>
+<%# if user_signed_in? %>
 
 <br/>
 
@@ -43,9 +43,9 @@
   <%= link_to "Nouvelle division", new_division_path, class:"btn btn-primary" %>
 
 
-<% else %>
+<%# else %>
 
-  <h3> Vous n'avez pas les droits...</h3>
+
   
-<% end %>
+<%# end %>
 
