modifs pour prod

--- a/app/views/circuits/index.html.erb
+++ b/app/views/circuits/index.html.erb
@@ -1,5 +1,5 @@
 
-<% if user_signed_in? %>
+<%# if user_signed_in? %>
 
 <br/>
 
@@ -67,8 +67,8 @@
 
   <%= link_to "Nouveau circuit", new_circuit_path, class:"btn btn-primary" %>
 
-<% else %>
+<%# else %>
 
-  <h3> Vous n'avez pas les droits...</h3>
+ 
   
-<% end %>
+<%# end %>
