--- a/app/views/equipes/index.html.erb
+++ b/app/views/equipes/index.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? %>
+<%# if user_signed_in? %>
 
 <br/>
 
@@ -43,8 +43,8 @@
  <br> <br>
   <%= link_to "PDF", equipes_path(format: :pdf), class:"btn btn-dark" %>
 
-<% else %>
+<%#else %>
 
-  <h3> Vous n'avez pas les droits...</h3>
+ 
   
-<% end %>
+<%# end %>
